--- a/store/blocks/desktop/screen/home.jsonc
+++ b/store/blocks/desktop/screen/home.jsonc
@@ -2,13 +2,16 @@
   "responsive-layout.desktop": {
     "title": "desktop component",
     "children": [
-      "list-context.image-list#home__slider--list",
-      "flex-layout.row#desktop__home--section--search",
-      "flex-layout.row#home__section--one",
-      "flex-layout.row#home__section--two",
-      "flex-layout.row#home__section--services2",
-      "modal-trigger#home__modal--children"
-      //"modal-trigger#home__modal--event"
+      "list-context.image-list#global__home--slider-list",
+      "flex-layout.row#global__home--section-search",
+      "rich-text#global__home--title-categories",
+      "flex-layout.row#global__home--categories",
+      "flex-layout.row#global__home--section-one",
+      "rich-text#global__home--title-services",
+      "flex-layout.row#global__home--section-services1",
+      "flex-layout.row#global__home--section-services2",
+      "modal-trigger#desktop__home--modal-children"
+      // "modal-trigger#desktop__home--modal-event"
     ]
   }
 } 
