--- a/store/blocks/global/components/home/home-promociones.jsonc
+++ b/store/blocks/global/components/home/home-promociones.jsonc
@@ -1,33 +1,33 @@
 {
-  "flex-layout.row#home__section--one": {
+  "flex-layout.row#global__home--section-one": {
       "title": "Sección uno", 
       "children": [
-        "flex-layout.col#section__one--image",
-        "flex-layout.col#section__one--image2"
+        "flex-layout.col#home__section--one-image",
+        "flex-layout.col#home__section--one-image2"
       ],
       "props": {
         "blockClass": "home__section--one",
-        "colSizing":"auto", 
+        "colSizing":"equal", 
         "horizontalAlign": "center", 
         "colJustify": "around"
       }
   },
-    "flex-layout.col#section__one--image": {
+    "flex-layout.col#home__section--one-image": {
       "title": "Imagen 1 de seccion uno",
       "children": [
         "image#home__image1"
       ], 
       "props": {
-        "blockClass": "section__one--image"
+        "blockClass": "home__section--one-image"
       }
     },
-    "flex-layout.col#section__one--image2": {
+    "flex-layout.col#home__section--one-image2": {
       "title": "Imagen 2 de seccion uno",
       "children": [
         "image#home__image2"
       ],
       "props": {
-        "blockClass": "section__one--image2"
+        "blockClass": "home__section--one-image2"
       }
     }
 }
