--- a/store/blocks/global/components/home/home-services.jsonc
+++ b/store/blocks/global/components/home/home-services.jsonc
@@ -1,5 +1,5 @@
 {
-    "flex-layout.row#home__section--two": {
+    "flex-layout.row#global__home--section-services1": {
       "title": "seccion de servicios parte 1",
       "children": [
         "flex-layout.col#section__two--item1",
@@ -8,7 +8,9 @@
         "flex-layout.col#section__two--item4"
       ], 
       "props": {
-        "blockClass": "home__section--two"
+        "blockClass": "home__section--two",
+        "colSizing": "equal", 
+        "horizontalAlign": "center"
       }
     },
       "flex-layout.col#section__two--item1": {
@@ -73,7 +75,7 @@
             "text": "PRODUCTOS PARA TI"
           }
         },
-    "flex-layout.row#home__section--services2": {
+    "flex-layout.row#global__home--section-services2": {
       "title": "Seccion de servicios parte 2",
       "children": [
         "flex-layout.col#section__services2--item1",
@@ -99,7 +101,7 @@
           "title": "Imagen de envio gratis", 
           "props": {
             "src": "assets/img/home__section--services-shipping.png", 
-            "maxWidth": 50,
+            "maxWidth": 40,
             "blockClass": "section__services2"
           }
         }, 
@@ -123,7 +125,7 @@
           "title": "Img Devoluciones gratis", 
           "props": {
             "src": "assets/img/home__section--services-repayment.png", 
-            "maxWidth": 50,
+            "maxWidth": 40,
             "blockClass": "section__services2"
           }
         }, 
@@ -147,7 +149,7 @@
           "title": "Img pago contraentrega", 
           "props": {
             "src": "assets/img/home__section--services-home.png", 
-            "maxWidth": 50,
+            "maxWidth": 40,
             "blockClass": "section__services2"
           }
         }, 
@@ -171,7 +173,7 @@
           "title": "Img tiempo de entrega", 
           "props": {
             "src": "assets/img/home__section--services-delivery.png", 
-            "maxWidth": 50,
+            "maxWidth": 40,
             "blockClass": "section__services2"
           }
         }, 
