--- a/store/blocks/mobile/screen/header.jsonc
+++ b/store/blocks/mobile/screen/header.jsonc
@@ -21,10 +21,15 @@
     "header-row#mobile__header--middle": {
         "title": "Header medio",
         "children": [
-            "drawer#mobile__header--menu"
+            "drawer#mobile__header--menu", 
+            "search-bar#mobile__header--search"
         ], 
         "props": {
             "blockClass": "header__middle"
         }
+    },
+    "search-bar#mobile__header--search":{
+        // "blocks": ["autocomplete-result-list.v2"], 
+        "props": {"openAutocompleteOnFocus": true}
     }
 }
