--- a/store/blocks/mobile/screen/home.jsonc
+++ b/store/blocks/mobile/screen/home.jsonc
@@ -4,8 +4,8 @@
     "children": [
       "list-context.image-list#global__home--slider-list",
         // "flex-layout.row#global__home--section-search"
-        "rich-text#global__home--title-categories",
-        "flex-layout.row#global__home--categories",
+        // "rich-text#global__home--title-categories",
+        // "flex-layout.row#global__home--categories",
         "flex-layout.row#global__home--section-one",
         "rich-text#global__home--title-services",
         "flex-layout.row#global__home--section-services1",
