add typography, desktop header styles

--- a/store/blocks/desktop/screen/header.jsonc
+++ b/store/blocks/desktop/screen/header.jsonc
@@ -3,140 +3,11 @@
     "title": "Header desktop",
     "children": [
       "header-row#header__top",
-      "header-row#desktop__header--top", 
-      "header-row#desktop__header--middle"
+      "header-row#desktop__header--middle", 
+      "header-row#desktop__header--bottom"
     ],
     "props": {
       "blockClass": "desktop__header"
-    }
-  },
-  "header-row#desktop__header--top": {
-    "title": "Header superior", 
-    "children": [
-      "logo#desktop__header--logo",
-      "search-bar#mobile__header--search",
-      "header-spacer",
-      "login#desktop__header--login",
-      "minicart.v2"
-    ],
-    "props": {
-      "blockClass": "header__top"
-    }
-  }, 
-  "header-row#desktop__header--middle": {
-    "title": "Header medio",
-    "children": [
-      // "flex-layout.row#desktop__header--menu"
-      "menu#desktop__header--menu"
-    ], 
-    "props": {
-      "blockClass": "desktop__header--middle"
-    }
-  },
-  // "header-row#desktop__header--middle": {
-  //   "title": "Header medio",
-  //   "children": [
-  //     "flex-layout.row#desktop__header--menu"
-  //     // "menu#desktop__header--menu"
-  //   ], 
-  //   "props": {
-  //     "blockClass": "desktop__header--middle"
-  //   }
-  // },
-  "flex-layout.row#desktop__header--menu": {
-    "title": "menu para escritorio", 
-    "children": [
-      "flex-layout.col#header__menu--animals"
-      // "menu#desktop__header--menu"
-      
-    ], 
-    "props": {
-      "blockClass": "desktop__header--menu",
-      "colsizing": "auto",
-      // "fullWidth": "true", 
-      "horizontalAlign": "around"
-    }
-  },
-  "flex-layout.col#header__menu--animals": {
-    "title": "Menu de animales",
-    "children": [
-      "flex-layout.col#header__menu--animals1", 
-      "flex-layout.col#header__menu--animals2"
-    ], 
-    "props": {"blockClass": "header__menu--animals"}
-  },
-  "flex-layout.col#header__menu--animals1": {
-    "title": "Menu perro",
-    "children": [
-      "image#header__menu--dog", 
-      "rich-text#header__menu--text-dog"
-    ], 
-    "props": {
-      // "horizontalAlign": "center"
-      "blockClass": "header__menu--animals1"
-    }
-  }, 
-    "image#header__menu--dog": {
-      "title": "Menu perro img",
-      "props": {
-        "blockClass": "header__menu--animals",
-        "src": "assets/img/header__menu-dog.png"
-        // "width": "15%"
-      }
-    }, 
-    "rich-text#header__menu--text-dog": {
-      "title": "Menu perro texto",
-      "props": {
-        "blockClass": "header__menu--text",
-        "text": "PERROS",
-        "textPosition": "CENTER"
-      }
-    },
-  "flex-layout.col#header__menu--animals2": {
-    "children": [
-      "image#header__menu--cat", 
-      "rich-text#header__menu--text-cat"
-    ],
-    "props": {
-      "blockClass": "header__menu--animals1"
-    }
-  },
-    "image#header__menu--cat": {
-      "title": "Menu gato img",
-      "props": {
-        "blockClass": "header__menu--animals2",
-        "src": "assets/img/header__menu-cat.png"
-        // "width": "5%"
-      }
-    }, 
-    "rich-text#header__menu--text-cat": {
-      "title": "Menu gato texto",
-      "props": {
-        "blockClass": "header__menu--text",
-        "text": "GATOS", 
-        "textPosition": "CENTER"
-      }
-    },
-  "link.product#desktop__header--menu-offers": {
-    "props": {
-      "href": "https://www.google.com",
-      "label": "More details >"
-    }
-  },
-  "menu#desktop__header--menu": {
-    "children": [
-      "flex-layout.row#desktop__header--menu",
-      "menu-item#department__one",
-      "menu-item#department__two", 
-      "menu-item#department__three", 
-      "menu-item#department__four",
-      "menu-item#department__five", 
-      "menu-item#department__six", 
-      "menu-item#department__seven", 
-      "link.product#desktop__header--menu-offers"
-    ], 
-    "props": {
-      "blockClass": "desktop__header--menu"
     }
   }
 }
