feat: adding icons and complementing the menu

--- a/store/blocks/desktop/components/header/header-section-bottom.jsonc
+++ b/store/blocks/desktop/components/header/header-section-bottom.jsonc
@@ -5,7 +5,8 @@
       "menu#desktop__header--menu"
     ], 
     "props": {
-      "blockClass": "desktop__header--bottom"
+      "blockClass": "desktop__header--bottom",
+      "sticky": true
     }
   },
     "menu#desktop__header--menu": {
