--- a/store/blocks/mobile/components/header/header-section-bottom.jsonc
+++ b/store/blocks/mobile/components/header/header-section-bottom.jsonc
@@ -1,13 +1,13 @@
 {
   "header-row#mobile__header--bottom": {
     "title": "Header medio",
-    "children": ["search-bar#mobile__header--search"], 
+    "children": ["search-bar#header--search"], 
     "props": {
         "blockClass": "header__bottom", 
         "sticky": true
     }
   },
-  "search-bar#mobile__header--search":{
+  "search-bar#header--search":{
     "blocks": ["autocomplete-result-list.v2"], 
     "props": {
         "containerMode": "overlay",
