--- a/store/blocks/mobile/screen/home.jsonc
+++ b/store/blocks/mobile/screen/home.jsonc
@@ -9,7 +9,8 @@
         "flex-layout.row#global__home--section-one",
         "rich-text#global__home--title-services",
         "flex-layout.row#global__home--section-services1",
-        "flex-layout.row#global__home--section-services2"
+        "flex-layout.row#global__home--section-services2", 
+        "search-result-layout.customQuery#home__search"
     ]
   }
 }
