--- a/manifest.json
+++ b/manifest.json
@@ -52,7 +52,8 @@
     "vtex.overlay-layout": "0.x",
     "vtex.search": "2.x",
     "vtex.store-icons": "0.x",
-    "vtex.checkout-summary": "0.x"
+    "vtex.checkout-summary": "0.x",
+    "vtex.product-list": "0.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
